--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -3,12 +3,10 @@
     android:id="@+id/dialog_bg"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="40dp"
     android:padding="10dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_gravity="center">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v7.widget.AppCompatImageButton
         android:id="@+id/dialog_close"
