--- a/app/src/main/res/layout/dialog_list.xml
+++ b/app/src/main/res/layout/dialog_list.xml
@@ -34,7 +34,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/dialog_recycler"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         app:layout_constraintTop_toBottomOf="@id/dialog_title"
         app:layout_constraintLeft_toLeftOf="parent"
